# Hand-drawn-Math-Diagrams

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: fetch_models.py
src/: run.py
src/core/: bootstrap.py  config.py  logging_setup.py
src/ink/: canvas.py  shapes.py  strokes.py
src/nl/: expressions.py  latex_to_sympy.py
src/ocr/: normalize.py  pix2tex_engine.py  trocr_engine.py
src/render/: board.py  latex.py
src/solve/: algebra.py  calculus.py  polynomials.py  triangle.py
src/ui/: hotkeys.py  sidebar.py
tests/: test_algebra.py  test_integrals.py  test_latex_parse.py  test_ocr_normalize.py  test_triangle_solver.py
